force-app/main/default/objects/Sales_Order__c/fields/Account_Hold_Exception__c.field-meta.xml
<CustomField>
    <fullName>Account_Hold_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Override Account Hold to allocate and process the order.</inlineHelpText>
    <label>Account Hold Exception</label>
    <type>Checkbox</type>
</CustomField>