force-app/main/default/objects/Sales_Order__c/fields/Allocated__c.field-meta.xml
<CustomField>
    <fullName>Allocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allocated?</label>
    <type>Checkbox</type>
</CustomField>