force-app/main/default/objects/Sales_Order__c/fields/BOPA__c.field-meta.xml
<CustomField>
    <fullName>BOPA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Order has Backorders or is Partially Allocated (BOPA) and requires adjustments to move Order forward</inlineHelpText>
    <label>BOPA</label>
    <type>Checkbox</type>
</CustomField>