force-app/main/default/objects/Sales_Order__c/fields/Brand_Quote__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote__c</fullName>
    <label>Brand Quote</label>
    <referenceTo>Brand_Quote__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>