force-app/main/default/objects/Sales_Order__c/fields/Change_Order_Fee__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, automation will insert Change Order Fee from Fulfillment Rate Table</inlineHelpText>
    <label>Change Order Fee</label>
    <type>Checkbox</type>
</CustomField>