force-app/main/default/objects/Sales_Order__c/fields/Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>Delivery_City__c</fullName>
    <formula>Text(Receiver_License__r.License_City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery City</label>
    <type>Text</type>
</CustomField>