force-app/main/default/objects/Sales_Order__c/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <formula>if(Text( SO_Status__c )  &lt;&gt; &quot;rejected&quot;  &amp;&amp; Text( SO_Status__c )  &lt;&gt; &quot;cancelled&quot; &amp;&amp; Total_Price__c &gt; 0,
Total_Distribution_Fees__c /  Total_Price__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Distribution Fees compared to Total Product Price</inlineHelpText>
    <label>Distribution (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>