force-app/main/default/objects/Sales_Order__c/fields/Distributor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Orders (Distributor Contact)</relationshipLabel>
    <relationshipName>Sales_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>