force-app/main/default/objects/Sales_Order__c/fields/Distributor_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Distributor_License_Number__c</fullName>
    <formula>Distributor_License__r.License_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor License Number</label>
    <type>Text</type>
</CustomField>