force-app/main/default/objects/Sales_Order__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders as Distributor</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>