force-app/main/default/objects/Sales_Order__c/fields/DO_NOT_INVOICE__c.field-meta.xml
<CustomField>
    <fullName>DO_NOT_INVOICE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO NOT INVOICE</label>
    <type>Checkbox</type>
</CustomField>