force-app/main/default/objects/Sales_Order__c/fields/Factoring_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factoring Assignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders as Factoring Assignee</relationshipLabel>
    <relationshipName>Sales_Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>