force-app/main/default/objects/Sales_Order__c/fields/Factoring_Contact__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factoring Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Orders (Factoring Contact)</relationshipLabel>
    <relationshipName>Sales_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>