force-app/main/default/objects/Sales_Order__c/fields/Is_Brand_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Brand_Product__c</fullName>
    <formula>Ownership__r.Id =  $User.AccountId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Brand Product</label>
    <type>Checkbox</type>
</CustomField>