force-app/main/default/objects/Sales_Order__c/fields/Listing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Listing_Fee__c</fullName>
    <label>Listing Fee</label>
    <summarizedField>Sales_Order_Line__c.Listing_Fee__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Order_Line__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>