force-app/main/default/objects/Sales_Order__c/fields/Multi_Transport__c.field-meta.xml
<CustomField>
    <fullName>Multi_Transport__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has more than 1 transporter.</inlineHelpText>
    <label>Multi-Transport</label>
    <type>Checkbox</type>
</CustomField>