force-app/main/default/objects/Sales_Order__c/fields/Order_Booking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Order_Booking_Fee__c</fullName>
    <label>Order Booking Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>