force-app/main/default/objects/Sales_Order__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders as Ownership</relationshipLabel>
    <relationshipName>Sales_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>