force-app/main/default/objects/Sales_Order__c/fields/Piggyback_Sample__c.field-meta.xml
<CustomField>
    <fullName>Piggyback_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Piggyback Sample</label>
    <type>Checkbox</type>
</CustomField>