force-app/main/default/objects/Sales_Order__c/fields/Planned_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Ship_Date__c</fullName>
    <inlineHelpText>Date in which the products are to be delivered</inlineHelpText>
    <label>Planned Ship Date</label>
    <type>Date</type>
</CustomField>