force-app/main/default/objects/Sales_Order__c/fields/Receiver_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Acceptance_Date__c</fullName>
    <formula>Brand_Quote__r.Receiver_Acceptance_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver Acceptance Date</label>
    <type>DateTime</type>
</CustomField>