force-app/main/default/objects/Sales_Order__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <formula>Brand_Quote__r.Requested_Ship_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>