force-app/main/default/objects/Sales_Order__c/fields/Retailer_PO__c.field-meta.xml
<CustomField>
    <fullName>Retailer_PO__c</fullName>
    <label>Retailer PO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>