force-app/main/default/objects/Sales_Order__c/fields/Route_Miles__c.field-meta.xml
<CustomField>
    <fullName>Route_Miles__c</fullName>
    <formula>Receiver_License__r.Total_Miles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Miles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>