force-app/main/default/objects/Sales_Order__c/fields/Sales_Origin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Origin__c</fullName>
    <formula>TEXT(Brand_Quote__r.Sales_Origin__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Origin</label>
    <type>Text</type>
</CustomField>