force-app/main/default/objects/Sales_Order__c/fields/Sample_Order__c.field-meta.xml
<CustomField>
    <fullName>Sample_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Order</label>
    <type>Checkbox</type>
</CustomField>