force-app/main/default/objects/Sales_Order__c/fields/Shipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Status__c</fullName>
    <label>Shipment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Shipment Pending</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Delivery</fullName>
            </value>
            <value>
                <fullName>Shipment Complete</fullName>
            </value>
            <value>
                <fullName>In-Transit</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>