force-app/main/default/objects/Sales_Order__c/fields/SO_Status__c.field-meta.xml
<CustomField>
    <fullName>SO_Status__c</fullName>
    <label>SO Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>