force-app/main/default/objects/Sales_Order__c/fields/SO_Type__c.field-meta.xml
<CustomField>
    <fullName>SO_Type__c</fullName>
    <label>SO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sell Quote</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>