force-app/main/default/objects/Sales_Order__c/fields/Stage_Manifest_Fee__c.field-meta.xml
<CustomField>
    <fullName>Stage_Manifest_Fee__c</fullName>
    <label>Stage &amp; Manifest Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>