force-app/main/default/objects/Sales_Order__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Orders (Supplier Contact)</relationshipLabel>
    <relationshipName>Sales_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>