force-app/main/default/objects/Sales_Order__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders as Supplier</relationshipLabel>
    <relationshipName>Sales_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>