force-app/main/default/objects/Sales_Order__c/fields/Third_Party_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Scheduler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party Scheduler</label>
    <type>Checkbox</type>
</CustomField>