force-app/main/default/objects/Sales_Order__c/fields/Total_Change_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Change_Fee__c</fullName>
    <label>Total Change Fee</label>
    <summarizedField>Sales_Order_Line__c.Total_SOLI_Change_fee__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>