force-app/main/default/objects/Sales_Order__c/fields/Total_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Items__c</fullName>
    <label>Total Line Items</label>
    <summaryFilterItems>
        <field>Sales_Order_Line__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>