force-app/main/default/objects/Sales_Order__c/fields/Total_Pick_Pack_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Pick_Pack_Fee__c</fullName>
    <label>Total Pick &amp; Pack Fee</label>
    <summarizedField>Sales_Order_Line__c.Pick_Pack_Fee__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>