force-app/main/default/objects/Sales_Order__c/fields/Total_QA_Review_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_QA_Review_Fee__c</fullName>
    <label>Total QA Review Fee</label>
    <summarizedField>Sales_Order_Line__c.QA_Review_Fee__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>