force-app/main/default/objects/Sales_Order__c/fields/Total_Revision__c.field-meta.xml
<CustomField>
    <fullName>Total_Revision__c</fullName>
    <label>Total Revision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>