force-app/main/default/objects/Sales_Order__c/fields/Total_Weight_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_Fee__c</fullName>
    <label>Total Weight Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>