force-app/main/default/objects/Sales_Order__c/fields/Total_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_lbs__c</fullName>
    <label>Total Weight (lbs)</label>
    <summarizedField>Sales_Order_Line__c.Total_Weight_lbs__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>