force-app/main/default/objects/Sales_Order__c/recordTypes/Lab.recordType-meta.xml
<RecordType>
    <fullName>Lab</fullName>
    <active>true</active>
    <description>Used for Lab Test Sampling - Ship Confirm to &quot;Test Sampled&quot; Inventory Location</description>
    <label>Lab</label>
</RecordType>