force-app/main/default/objects/Sales_Order__c/recordTypes/Transfer.recordType-meta.xml
<RecordType>
    <fullName>Transfer</fullName>
    <active>true</active>
    <description>Used for Outbound Transfer Non-Retail Channel - Ship Confirm to &quot;Transferred&quot; Inventory Location</description>
    <label>Transfer</label>
</RecordType>