force-app/main/default/objects/Sales_Order__c/validationRules/Cannot_change_SO_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_SO_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(SO_Type__c) &amp;&amp; TEXT(SO_Status__c) &lt;&gt; &apos;Draft&apos;</errorConditionFormula>
    <errorMessage>Cannot change SO type now. Please Allocate/Reverse allocate SO to ( Draft ) Status and try again.</errorMessage>
</ValidationRule>