force-app/main/default/objects/Sales_Order__c/listViews/Rejected.listView-meta.xml
<ListView>
    <fullName>Rejected</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Planned_Ship_Date__c</columns>
    <columns>Priority__c</columns>
    <columns>Window_Start__c</columns>
    <columns>Window_End__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Supplier_DBA__c</columns>
    <columns>Receiver_DBA__c</columns>
    <columns>Total_Price__c</columns>
    <columns>Receiver_Zone__c</columns>
    <columns>Delivery_City__c</columns>
    <columns>Driver__c</columns>
    <columns>Vehicle__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SO_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <filters>
        <field>Driver__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Order__c.Product,Sales_Order__c.Transfer,Sales_Order__c.Lab</value>
    </filters>
    <label>Rejected</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>