force-app/main/default/objects/Sales_Order__c/listViews/Sales_Order_Not_Shipped.listView-meta.xml
<ListView>
    <fullName>Sales_Order_Not_Shipped</fullName>
    <columns>Site__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Receiver_Acceptance_Date__c</columns>
    <columns>Planned_Ship_Date__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>Window_Start_End__c</columns>
    <columns>Driver__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Receiver_DBA__c</columns>
    <columns>Delivery_City__c</columns>
    <columns>Receiver_Zone__c</columns>
    <columns>Total_Price__c</columns>
    <columns>QA_Hold__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SO_Status__c</field>
        <operation>equals</operation>
        <value>Approved,Draft</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Order__c.Service</value>
    </filters>
    <filters>
        <field>Ship_Confirmation_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Sales Order Not Shipped</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>