force-app/main/default/objects/Sales_Order__c/listViews/X1_Pending_Allocation.listView-meta.xml
<ListView>
    <fullName>X1_Pending_Allocation</fullName>
    <columns>Site__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Receiver_Acceptance_Date__c</columns>
    <columns>Planned_Ship_Date__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>Window_Start_End__c</columns>
    <columns>Driver__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Receiver_DBA__c</columns>
    <columns>Delivery_City__c</columns>
    <columns>Receiver_Zone__c</columns>
    <columns>Total_Price__c</columns>
    <columns>Sales_Order_Instructions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SO_Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>1. Pending Allocation</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>